# irRipples

./: Cargo.toml  README.md  build.rs
src/: effects.rs  main.rs  ui.rs
