[package]
name = "waves"
version = "1.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "*"
rand = "*"
noise = "*"

# Windows-specific build configuration for no console window
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[[bin]]
name = "waves"
path = "src/main.rs"